--- a/waybar/style.css
+++ b/waybar/style.css
@@ -44,8 +44,9 @@
   border: none;
   border-radius: 0;
   font-family: 'JetBrains Nerd Font', monospace;
-  font-size: 13px;
+  font-size: 14px;
   min-height: 0;
+  /* margin-bottom: 10px; */
 }
 
 /* =============================== */
@@ -78,9 +79,6 @@
 #language,
 #disk,
 #temperature,
-#custom-music,
-#custom-music-next,
-#custom-music-prev,
 #custom-updates,
 #custom-nordvpn,
 #custom-notifications,
@@ -92,17 +90,15 @@
 #custom-tomato,
 #custom-pomodoro,
 #custom-playerctl,
+#custom-playerctl-next,
 #custom-weather {
   background-color: @surface0;
   color: @text;
-  border-radius: 16px;
+  border-radius: 12px;
   padding: 0.5rem 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.116) 2px 2px 5px 2px;
-  margin-top: 0px;
-  /*
-    margin-bottom: 10px;
-*/
   margin-right: 10px;
+  margin-top: 4px;
 }
 
 #language {
@@ -199,22 +195,16 @@ window#waybar {
 }
 
 #custom-playerctl {
-  border-radius: 0px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
   margin-right: 0px;
   margin-left: 0px;
 }
 
-#custom-music-next {
+#custom-playerctl-next {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
-}
-
-#custom-music-prev {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  margin-right: 0px;
-  padding-right: 5px;
-  padding-left: 5px;
+  padding-right: 1rem;
 }
 
 /* Updates Module */
@@ -229,61 +219,6 @@ window#waybar {
 /* Clock Module */
 #clock {
   color: @flamingo;
-}
-
-/* =============================== */
-
-
-#custom-music.low {
-  background: rgb(148, 226, 213);
-  background: linear-gradient(52deg, rgba(148, 226, 213, 1) 0%, rgba(137, 220, 235, 1) 19%, rgba(116, 199, 236, 1) 43%, rgba(137, 180, 250, 1) 56%, rgba(180, 190, 254, 1) 80%, rgba(186, 187, 241, 1) 100%);
-  background-size: 300% 300%;
-  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.377);
-  animation: gradient 15s ease infinite;
-  font-weight: bold;
-  color: #fff;
-}
-
-#custom-music.random {
-  background: rgb(148, 226, 213);
-  background: radial-gradient(circle, rgba(148, 226, 213, 1) 0%, rgba(156, 227, 191, 1) 21%, rgba(249, 226, 175, 1) 34%, rgba(158, 227, 186, 1) 35%, rgba(163, 227, 169, 1) 59%, rgba(148, 226, 213, 1) 74%, rgba(164, 227, 167, 1) 74%, rgba(166, 227, 161, 1) 100%);
-  background-size: 400% 400%;
-  animation: gradient_f 4s ease infinite;
-  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.377);
-  font-weight: bold;
-  color: #fff;
-}
-
-#custom-music.critical {
-  background: rgb(235, 160, 172);
-  background: linear-gradient(52deg, rgba(235, 160, 172, 1) 0%, rgba(243, 139, 168, 1) 30%, rgba(231, 130, 132, 1) 48%, rgba(250, 179, 135, 1) 77%, rgba(249, 226, 175, 1) 100%);
-  background-size: 300% 300%;
-  animation: gradient 15s cubic-bezier(.55, -0.68, .48, 1.68) infinite;
-  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.377);
-  font-weight: bold;
-  color: #fff;
-}
-
-#custom-music.Playing {
-  background: rgb(137, 180, 250);
-  background: radial-gradient(circle, rgba(137, 180, 250, 120) 0%, rgba(142, 179, 250, 120) 6%, rgba(148, 226, 213, 1) 14%, rgba(147, 178, 250, 1) 14%, rgba(155, 176, 249, 1) 18%, rgba(245, 194, 231, 1) 28%, rgba(158, 175, 249, 1) 28%, rgba(181, 170, 248, 1) 58%, rgba(205, 214, 244, 1) 69%, rgba(186, 169, 248, 1) 69%, rgba(195, 167, 247, 1) 72%, rgba(137, 220, 235, 1) 73%, rgba(198, 167, 247, 1) 78%, rgba(203, 166, 247, 1) 100%);
-  background-size: 400% 400%;
-  animation: gradient_f 9s cubic-bezier(.72, .39, .21, 1) infinite;
-  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.377);
-  font-weight: bold;
-  color: #fff;
-}
-
-#custom-music.Paused,
-#custom-music.Stopped {
-  background: @surface0;
-}
-
-
-/* =============================== */
-/* Music/PlayerCTL Module */
-#custom-music {
-  color: @mauve;
 }
 
 /* =============================== */
@@ -333,8 +268,7 @@ window#waybar {
 #battery {
   color: @green;
   margin-right: 0px;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
+  border-radius: 0;
   padding-left: 5px;
   padding-right: 5px;
 }
@@ -384,6 +318,8 @@ window#waybar {
 /* Tray Module */
 #tray {
   color: @mauve;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
   padding-right: 1.25rem;
 }
 
@@ -424,9 +360,6 @@ window#waybar {
 /* Powermenu Module */
 #custom-power {
   color: @mauve;
-  /* border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-  padding-left: 8px; */
   padding-right: 1.20em;
   padding-left: 1.20em;
 }
